--- a/about.html
+++ b/about.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="/CSS/aboutUs.css">
+    <link rel="icon" type="image/x-icon" href="/Photos/DreamBuild-logos_black.png">
     <title>ABOUT US section</title>
 </head>
 <body>
     <div class="heading">
-        <h1>About-Us</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+        <h1>About Us</h1>
+        <p>Your Dream Big. We Build It!</p>
     </div>
     <section class="about-us">
         <img src="/Photos/pc.jpg" alt="photo">
         <div class="content">
-            <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi doloribus vitae cumque nostrum deleniti illo dolorem fugit perferendis hic provident eligendi quae aliquam consectetur dolorum, optio quod quas sint aut! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nisi magnam, asperiores impedit in consequatur quasi mollitia nostrum quos sint, enim officia earum non temporibus illo, repellendus porro ab itaque? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis cupiditate corporis similique, qui quia ab. Fuga quasi, nulla qui molestiae sit earum, assumenda dolorum esse fugit tempore aperiam optio accusamus.</p>
+            <h2>At DreamBuild, You Choose, We Build.</h2>
+            <p>Welcome to Dream Build, your premier destination for top-quality PC building solutions. We are a leading company dedicated to delivering exceptional custom-built computers tailored to suit your unique needs. With our expertise, attention to detail, and commitment to customer satisfaction, we strive to redefine the PC building experience.
+
+            At DreamBuild, we understand that every individual has distinct requirements when it comes to their computer systems. Whether you're a passionate gamer, a creative professional, or a tech enthusiast seeking unparalleled performance, we are here to provide you with the perfect solution.</p>
         </div>
     </section>
 
@@ -48,7 +51,7 @@
                 </div>
 
                 <div class="comment">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad sunt accusantium voluptate repellendus, eaque, maiores eveniet facilis delectus fuga neque quam reiciendis natus at quia velit itaque atque fugit aperiam.</p>
+                    <p>I couldn't be happier with the custom PC I received from DreamBuild. The attention to detail and quality of components surpassed my expectations. The team listened to my specific needs and created a powerful gaming rig that runs flawlessly. The customer service was outstanding, with prompt responses to all my inquiries. I highly recommend DreamBuild for anyone looking for a top-notch PC-building experience.</p>
                 </div>
 
             </div>
@@ -73,7 +76,7 @@
                 </div>
 
                 <div class="comment">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad sunt accusantium voluptate repellendus, eaque, maiores eveniet facilis delectus fuga neque quam reiciendis natus at quia velit itaque atque fugit aperiam.</p>
+                    <p>As a graphic designer, I needed a high-performance workstation that could handle demanding design software. DreamBuild delivered exactly what I needed. From the initial consultation to the final product, their expertise and professionalism were evident. The PC they built for me is lightning-fast and handles multitasking effortlessly. I appreciate the team's dedication to quality and their commitment to ensuring that I had the best possible computing experience.</p>
                 </div>
 
             </div>
@@ -98,7 +101,7 @@
                 </div>
 
                 <div class="comment">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad sunt accusantium voluptate repellendus, eaque, maiores eveniet facilis delectus fuga neque quam reiciendis natus at quia velit itaque atque fugit aperiam.</p>
+                    <p>I had a fantastic experience with DreamBuild. Being new to PC gaming, I had numerous questions and concerns. The team at DreamBuild patiently guided me through the entire process, explaining all the technical aspects and helping me choose the right components for my budget. The result was a phenomenal gaming PC that exceeded my expectations in terms of performance and aesthetics. I can't recommend DreamBuild enough for their exceptional service and expertise.</p>
                 </div>
 
             </div>
@@ -123,7 +126,7 @@
                 </div>
 
                 <div class="comment">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad sunt accusantium voluptate repellendus, eaque, maiores eveniet facilis delectus fuga neque quam reiciendis natus at quia velit itaque atque fugit aperiam.</p>
+                    <p>I can confidently say that DreamBuild is the best PC building company I've ever worked with. Their attention to detail and commitment to customer satisfaction are unparalleled. From the moment I contacted them to the final delivery, they kept me informed and involved in the entire process. The team's knowledge and passion for PC building are evident in the masterpiece they created for me. The PC runs like a dream, and I'm grateful for DreamBuild's exceptional craftsmanship and exceptional service.</p>
                 </div>
 
             </div>
@@ -141,7 +144,7 @@
             </div>
     
             <div class="footerBottom">
-                <p>CopyRhight &copy; 2023 - All rights reserved. Designed by <span class="designers">Daniel Moussa / Andy Merhi</span></p>
+                <p>Copyright &copy; 2023 - All rights reserved. Designed by <span class="designers">Daniel Moussa / Andy Merhi</span></p>
             </div>
         </div>
     </footer>
