--- a/contactUs.html
+++ b/contactUs.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="CSS/contact.css">
     <script src="javascript/contact.js"></script>
+    <link rel="icon" type="image/x-icon" href="/Photos/DreamBuild-logos_black.png">
     <title>Contact-Us</title>
 </head>
 <body>
