--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/index.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-    <link rel="icon" type="image/x-icon" href="/Photos/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/Photos/DreamBuild-logos_black.png">
     <title>DreamBuild</title>
 </head>
 <body>
     <div class="banner">
         <div class="navbar">
-            <img class="logo" src="/Photos/logo.png" alt="logo">
+            <img class="logo" src="/Photos/DreamBuild-logos_white.png" alt="logo">
             <ul>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="contactUs.html">Contact us</a></li>
