--- a/signUp.html
+++ b/signUp.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="./CSS/signUp.css">
+  <link rel="icon" type="image/x-icon" href="/Photos/DreamBuild-logos_black.png">
   <title>Sign in</title>
 </head>
 <body>
